maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:9: error: too many arguments for method trouveLeBiscuit: ()Array[Int]
  coordBiscuit(0) = trouveLeBiscuit(0)
                                   ^JediEscaper:10: error: too many arguments for method trouveLeBiscuit: ()Array[Int]
  coordBiscuit(1) = trouveLeBiscuit(1)
                                   ^